# wingbeat-recorder

./: .gitignore  README.md  analize.ipynb  analyze.ipynb  main.py  pyproject.toml  record.ipynb
code/: Untitled-1.ipynb  analyze.ipynb  btlflt.py  config.py  record.ipynb  record.py  wbrec.py
