[project]
name = "wingbeat-recorder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "icecream>=2.1.4",
    "matplotlib>=3.10.1",
    "pooch>=1.8.2",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
